add css to form

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             </a>  
         </header>
 
-        <section id="content">
+        <section id="content" class="content-block">
             <h1>The Best Craft Pizza in Charlotte!</h1>
             <p>Beinvenido, amigos! We are a fictional location. We imagine that we have the best pizza in the Charlotte area!</p>
         </section>
 
-        <section id="reserve">
+        <section id="reserve"class="content-block">
             <h2>Make a Reservation</h2>
             <p>Save your spot now</p>
 
@@ -40,7 +40,7 @@
             </form>
         </section>
 
-        <footer id="footer">
+        <footer id="footer"class="content-block">
             &copy;2020 El Amigo
         </footer>
     </div>  
