--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <div id="container">
         <header id="header"> 
             <a href="/" title="Return to Home Page" id="logo">
-                <img src="/images/logo.png" alt="El Amigo Pub + Grill. Best Craft Pizza in Charlotte.">
+                <img src="/images/elAmigoLogo.png" alt="El Amigo Pub + Grill. Best Craft Pizza in Charlotte.">
             </a>  
         </header>
 
         <section id="content" class="content-block">
-            <h1>The Best Craft Pizza in Charlotte!</h1>
-            <p>Beinvenido, amigos! We are a fictional location. We imagine that we have the best pizza in the Charlotte area!</p>
+            <h1>The Best Craft Burger in Charlotte!</h1>
+            <p>Beinvenido, amigos! We are a fun casual fictional restaurant. </p> 
+            <p>We imagine to have the best burgers in the Charlotte area!</p>
         </section>
 
         <section id="reserve"class="content-block">
